# moview-api

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  samconfig.toml  schema.graphql  template.yaml
ali_api/: db.py  handler.py  profile_photos.py  schema.py  tmdb.py
events/: appsync-health.json  appsync-hello.json  http-graphql.json
moview_api/: __init__.py  handler.py  schema.py
postgres/: friendships.sql  movie_likes.sql  movie_watchlist.sql  users.sql
tests/: test_handler.py  test_profile_photos.py
